RESOLVED FIXED76915
[WK2] [GTK] TestDownloads hitting an assertion in Debug builds
https://bugs.webkit.org/show_bug.cgi?id=76915
Summary [WK2] [GTK] TestDownloads hitting an assertion in Debug builds
Sergio Villar Senin
Reported 2012-01-24 07:58:54 PST
This is the assertion ASSERTION FAILED: m_downloadClient (DownloadSoup.cpp:135)
Attachments
Patch (1.92 KB, patch)
2012-01-24 08:02 PST, Sergio Villar Senin
mrobinson: review+
mrobinson: commit-queue-
Sergio Villar Senin
Comment 1 2012-01-24 08:02:03 PST
Carlos Garcia Campos
Comment 2 2012-01-24 08:11:12 PST
Comment on attachment 123735 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=123735&action=review Yeah, my fault, sorry, Patch is correct, except the m_resourceHandle in Download::startWithHandle > Source/WebKit2/WebProcess/Downloads/soup/DownloadSoup.cpp:145 > - ASSERT(m_downloadClient); > + ASSERT(!m_downloadClient); > ASSERT(m_resourceHandle); This should be !m_resourceHandle, since it's assigned to resourceHandle below
Sergio Villar Senin
Comment 3 2012-01-24 08:13:23 PST
(In reply to comment #2) > (From update of attachment 123735 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=123735&action=review > > Yeah, my fault, sorry, Patch is correct, except the m_resourceHandle in Download::startWithHandle > > > Source/WebKit2/WebProcess/Downloads/soup/DownloadSoup.cpp:145 > > - ASSERT(m_downloadClient); > > + ASSERT(!m_downloadClient); > > ASSERT(m_resourceHandle); > > This should be !m_resourceHandle, since it's assigned to resourceHandle below Yeah I overlooked it, I thought the ASSERT was checking the function argument
Martin Robinson
Comment 4 2012-01-24 08:48:20 PST
Comment on attachment 123735 [details] Patch Please land with cgarcia's suggested fix.
Sergio Villar Senin
Comment 5 2012-01-24 10:03:39 PST
Note You need to log in before you can comment on or make changes to this bug.