[WK2] [GTK] TestDownloads hitting an assertion in Debug builds https://bugs.webkit.org/show_bug.cgi?id=76915

Reviewed by Martin Robinson.

No new tests required as it fixes some assertions in a unit test.

* WebProcess/Downloads/soup/DownloadSoup.cpp:
(WebKit::Download::start):
(WebKit::Download::startWithHandle):

git-svn-id: svn://svn.chromium.org/blink/trunk@105746 bbb929c8-8fbe-4397-9dbb-9b2b20218538